# screentime

./: Cargo.toml  README.md  config.txt
.github/workflows/: main.yml
src/: main.rs
