[package]
name = "screentime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.8.0"
chrono = "0.4.24"
timer = "0.2.0"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
